@@ -1105,20 +1105,22 @@ FLOAT_T pre_delay_time_table[] =
 
 FLOAT_T chorus_delay_time_table[] =
 {
-	0, 0.0125, 0.025, 0.0375, 0.05, 0.0625, 0.075, 0.0875, 
-	0.1, 0.1125, 0.125, 0.1375, 0.15, 0.1625, 0.175, 0.1875, 
-	0.2, 0.2125, 0.225, 0.2375, 0.25, 0.2625, 0.275, 0.2875, 
-	0.3, 0.3125, 0.325, 0.3375, 0.35, 0.3625, 0.375, 0.3875, 
-	0.4, 0.4125, 0.425, 0.4375, 0.45, 0.4625, 0.475, 0.4875, 
-	0.5, 0.5125, 0.525, 0.5375, 0.55, 0.5625, 0.575, 0.5875, 
-	0.6, 0.6125, 0.625, 0.6375, 0.65, 0.6625, 0.675, 0.6875, 
-	0.7, 0.7125, 0.725, 0.7375, 0.75, 0.7625, 0.775, 0.7875, 
-	0.8, 0.8125, 0.825, 0.8375, 0.85, 0.8625, 0.875, 0.8875, 
-	0.9, 0.9125, 0.925, 0.9375, 0.95, 0.9625, 0.975, 0.9875, 
-	1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 
-	3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4, 5.6, 5.8, 6, 
-	6.2, 6.4, 6.6, 6.8, 7, 7.2, 7.4, 7.6, 7.8, 8, 8.2, 8.4, 8.6, 
-	8.8, 9, 9.2, 9.4, 9.6, 9.8, 10, 10, 10, 
+    0.000000, 0.078740, 0.157480, 0.236220, 0.314961, 0.393701, 0.472441, 0.551181, 
+    0.629921, 0.708661, 0.787402, 0.866142, 0.944882, 1.023622, 1.102362, 1.181102, 
+    1.259843, 1.338583, 1.417323, 1.496063, 1.574803, 1.653543, 1.732283, 1.811024, 
+    1.889764, 1.968504, 2.047244, 2.125984, 2.204724, 2.283465, 2.362205, 2.440945, 
+    2.519685, 2.598425, 2.677165, 2.755906, 2.834646, 2.913386, 2.992126, 3.070866, 
+    3.149606, 3.228346, 3.307087, 3.385827, 3.464567, 3.543307, 3.622047, 3.700787, 
+    3.779528, 3.858268, 3.937008, 4.015748, 4.094488, 4.173228, 4.251969, 4.330709, 
+    4.409449, 4.488189, 4.566929, 4.645669, 4.724409, 4.803150, 4.881890, 4.960630, 
+    5.039370, 5.118110, 5.196850, 5.275591, 5.354331, 5.433071, 5.511811, 5.590551, 
+    5.669291, 5.748031, 5.826772, 5.905512, 5.984252, 6.062992, 6.141732, 6.220472, 
+    6.299213, 6.377953, 6.456693, 6.535433, 6.614173, 6.692913, 6.771654, 6.850394, 
+    6.929134, 7.007874, 7.086614, 7.165354, 7.244094, 7.322835, 7.401575, 7.480315, 
+    7.559055, 7.637795, 7.716535, 7.795276, 10.000000, 10.555556, 11.111111, 11.666667, 
+    12.222222, 12.777778, 13.333333, 13.888889, 14.444444, 15.000000, 15.555556, 16.111111, 
+    16.666667, 17.222222, 17.777778, 18.333333, 18.888889, 19.444444, 20.000000, 20.555556, 
+    21.111111, 21.666667, 22.222222, 22.777778, 23.333333, 23.888889, 24.444444, 25.000000, 
 };
 
 FLOAT_T rate1_table[] =
